falta rayas y  redondear figuras

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <section class="best_sellers ">
         <div class="d-flex flex-row">
             <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="seccion_titulo_img">
-            <h2 class="seccion_titulo">BEST SELLERS</h2>
+            <h2 class="best_sellers_titulo">BEST SELLERS</h2>
         </div>
         <div class="container d-flex flex-column justify-content-center align-items-center ">
             <div class=" owl-1 owl-carousel owl-theme  ">
@@ -231,7 +231,7 @@
         </div>
     </section>
     
-    <section class="shop_by_category my-5 ">
+    <section class="shop_by_category  ">
         <div class="d-flex flex-row">
             <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="titulo_img">
             <h2 class="shop_by_category_titulo">SHOP BY CATEGORY</h2>
@@ -268,59 +268,56 @@
             </button>
         </div>
     </section>
-    <section class="testimonials  d-flex flex-column pt-5">
-        <div class="testimonials_panel_color_uno">
-        </div class>
+    <section class="testimonials  d-flex flex-column pt-3">
+        <div class="testimonials_panel_color_uno"></div >
         <div class="testimonials_panel_color_dos"></div>
         <div class="d-flex flex-row">
             <img src="PRUEBA/IMAGENES/Rectangle 5.png" class=" about_us_titulo_img" alt="about_us_titulo_img">
             <h2 class="testimonials_titulo">Testimonials</h2>
         </div>
-        <div class="w-100 d-flex justify-content-center align-items-center" >
-            <div class="container-fluid owl-2 owl-carousel owl-theme">
-                <div class="container testimonials_item item d-flex flex justify-content-around py-1">
-                    <div class="w-50 p-5  mt-5 testimonials_informacion">
+        <div class="testimonials_container w-100 d-flex flex-column justify-content-center align-items-center" >
+            <div class="container owl-2 owl-carousel owl-theme">
+                <div class="container testimonials_item item d-flex flex justify-content-around align-items-center ">
+                    <div class="w-50 testimonials_informacion">
                         <p class="d-inline" >
                             <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
                         </p>
-                        <button class="testimonials_boton border-0 mt-5">View More</button>
                     </div>
-                    <div class="card best_sellers_card testimonials_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
-                        <div class="best_sellers_card-body ">
+                    <div class="card  best_sellers_card testimonials_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
+                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-2" alt="...">
+                        <div class="best_sellers_card-body testimonials_card-body">
                             Jhon Smith
                         </div>
                     </div>
                 </div>
-                <div class="container testimonials_item item d-flex justify-content-around py-1 ">
-                    <div class="w-50 p-5  mt-5 testimonials_informacion">
+                <div class="container testimonials_item item d-flex flex justify-content-around align-items-center ">
+                    <div class="w-50 testimonials_informacion">
                         <p class="d-inline" >
                             <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
                         </p>
-                        <button class="testimonials_boton border-0 mt-5">View More</button>
                     </div>
-                    <div class="card best_sellers_card testimonials_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
-                        <div class="best_sellers_card-body ">
+                    <div class="card  best_sellers_card testimonials_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
+                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-2" alt="...">
+                        <div class="best_sellers_card-body testimonials_card-body">
                             Jhon Smith
                         </div>
                     </div>
                 </div>
-                <div class="container testimonials_item item d-flex justify-content-around py-1 ">
-                    <div class="w-50 p-5  mt-5 testimonials_informacion">
+                <div class="container testimonials_item item d-flex flex justify-content-around align-items-center ">
+                    <div class="w-50 testimonials_informacion">
                         <p class="d-inline" >
                             <h6 class="d-inline">T</h6>he products in this store are the best on the market with tremendous quality that help me feel fresh every time I play sports, I don't have to worry about the material or anything else, they are 100% original products and made of the best materials, I recommend them
                         </p>
-                        <button class="testimonials_boton border-0 mt-5">View More</button>
                     </div>
-                    <div class="card best_sellers_card testimonials_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
-                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-3" alt="...">
-                        <div class="best_sellers_card-body ">
+                    <div class="card  best_sellers_card testimonials_card d-flex flex-column justify-content-start align-items-center" style="width: 18rem;">
+                        <img src="PRUEBA/IMAGENES/person_3.png" class="card-img-top mt-2" alt="...">
+                        <div class="best_sellers_card-body testimonials_card-body">
                             Jhon Smith
                         </div>
                     </div>
                 </div>
             </div>
+            <button class="testimonials_boton best_sellers_boton  border-0 ">View More</button>
         </div>
     </section>
     <section class="Subscribe_to_Newsletter container d-flex flex-column justify-content-center align-items-center my-4  ">
@@ -333,7 +330,7 @@
         </form>
     </section>
     <footer class="d-flex flex-column ">
-        <div class="footer_info d-flex flex-row   flex-wrap pt-4">
+        <div class="container footer_info d-flex flex-row   flex-wrap pt-4">
             <div class="d-flex flex-column justify-content-center align-items-center ">
                 <a href="index.html" target="_blank" rel="noopener noreferrer">
                     <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
@@ -404,8 +401,11 @@
                 </ul>
             </div>
         </div>
-        <div class="d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
-            <p>Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
+        <div class=" d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
+            <div class="container">
+
+            </div>
+            <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
             <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
                 <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
             </a>
