--- a/preguntasF.html
+++ b/preguntasF.html
@@ -79,7 +79,7 @@
         <div class="hero_panel_color_dos position-absolute h-100"></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
-                Shop By
+                Faq’s
             </h1>
         </div>
         <ul class="hero_redes_sociales d-flex flex-row ">
