--- a/shop.html
+++ b/shop.html
@@ -104,7 +104,7 @@
     </section>
     <main>
         <section class="shop">
-            <div class="d-flex flex-row my-5">
+            <div class="d-flex flex-row my-3">
             </div>
                 <div class="d-flex flex-row">
                     <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
@@ -281,7 +281,7 @@
                     </div>
                 </div>
             </div>
-            <div class="shop_short my-5 py-5">
+            <div class="shop_short  py-5">
                 <div class="d-flex flex-row">
                     <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
                     <h2 class="shop_titulo">Short</h2>
@@ -529,7 +529,7 @@
                     </div>
                 </div>
             </div>
-            <div class="shop_shirt my-5">
+            <div class="shop_shirt my-3">
                 <div class="d-flex flex-row">
                     <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
                     <h2 class="shop_titulo">Shirt</h2>
