falta rayas y  redondear figuras

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             <button class="testimonials_boton best_sellers_boton  border-0 ">View More</button>
         </div>
     </section>
-    <section class="Subscribe_to_Newsletter container d-flex flex-column justify-content-center align-items-center my-4  ">
+    <section class="Subscribe_to_Newsletter container d-flex flex-column justify-content-center align-items-center my-3  ">
         <h2>Subscribe to Newsletter</h2>
         <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
             <input type="text" placeholder="" class="mx-1">
@@ -330,7 +330,7 @@
         </form>
     </section>
     <footer class="d-flex flex-column ">
-        <div class="container footer_info d-flex flex-row   flex-wrap pt-4">
+        <div class=" footer_info d-flex flex-row   flex-wrap pt-4">
             <div class="d-flex flex-column justify-content-center align-items-center ">
                 <a href="index.html" target="_blank" rel="noopener noreferrer">
                     <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
