--- a/about.html
+++ b/about.html
@@ -158,7 +158,7 @@
                 </ul>
             </div>
         </section>
-        <section class="Subscribe_to_Newsletter Newsletter_about p-5 d-flex flex-column justify-content-center align-items-center mt-4">
+        <section class="Subscribe_to_Newsletter Newsletter_about py-3 d-flex flex-column justify-content-center align-items-center mt-4">
             <div class="container">
                 <h2 class="text-center">Subscribe to Newsletter</h2>
                 <form class=" d-flex flex-row flex-wrap justify-content-center align-content-center ">
