--- a/shop.html
+++ b/shop.html
@@ -107,7 +107,7 @@
             <div class="d-flex flex-row my-3">
             </div>
                 <div class="d-flex flex-row">
-                    <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
+                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg " class="about_us_titulo_img" alt="about_us_titulo_img">
                     <h2 class="shop_titulo">Shoes</h2>
                 </div>
                 <div class= "container-fluid d-flex flex-row flex-wrap justify-content-center align-items-center">
@@ -199,7 +199,7 @@
             </div>
             <div class="shop_short  py-5">
                 <div class="d-flex flex-row">
-                    <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
+                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="about_us_titulo_img" alt="about_us_titulo_img">
                     <h2 class="shop_titulo">Short</h2>
                 </div>
                 <div class= "container-fluid d-flex flex-row flex-wrap justify-content-center align-items-center">
@@ -303,7 +303,7 @@
             </div>
             <div class="shop_shirt my-3">
                 <div class="d-flex flex-row">
-                    <img src="PRUEBA/IMAGENES/Rectangle 5.png" class="about_us_titulo_img" alt="about_us_titulo_img">
+                    <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="about_us_titulo_img" alt="about_us_titulo_img">
                     <h2 class="shop_titulo">Shirt</h2>
                 </div>
                 <div class= "container-fluid d-flex flex-row flex-wrap justify-content-center align-items-center">
