--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
         <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
         </video>
-        <div class="hero_panel_color_uno position-absolute h-100">
-        </div class>
+        <div class="hero_panel_color_uno position-absolute h-100"></div>
         <div class="hero_panel_color_dos position-absolute h-100"></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
@@ -115,6 +114,10 @@
     </section>
     <main>
         <section class="best_sellers ">
+            <img src="PRUEBA/IMAGENES/Line 7.svg" class="position-absolute linea9" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 6.svg" class="position-absolute linea10" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 7.svg" class="position-absolute linea7" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 6.svg" class="position-absolute linea8" alt="" srcset="">
             <div class="d-flex flex-row">
                 <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="about_us_titulo_img" alt="seccion_titulo_img">
                 <h2 class="best_sellers_titulo">BEST SELLERS</h2>
@@ -176,7 +179,7 @@
                     <h2 class="about_us_titulo">ABOUT US</h2>
                 </div>
                 <div class="container about_us_informacion">
-                    <article >
+                    <article class="container">
                         <h6>W</h6> 
                         <p>
                             e are a leading company in the sports implements 
@@ -190,7 +193,7 @@
                             mental and physical health of our public.
                         </p>
                     </article>
-                    <article>
+                    <article class="container">
                         <h6>W</h6> 
                         <p>
                             We provide solutions in the field of sports at a 
@@ -202,12 +205,14 @@
                             audience.
                         </p>
                     </article>
-                    <button class="about_us_boton mt-5">
-                        Read  More
-                    </button>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <button class="container about_us_boton mt-5">
+                            Read  More
+                        </button>
+                    </div>
                 </div>
             </div>
-            <img src="PRUEBA/IMAGENES/ABOUT (2).jpg" class="about_us_img" alt="">
+            <img src="PRUEBA/IMAGENES/Rectangle 4.svg" class="svg" alt="">
             <div class="about_us_caracteristicas d-flex flex-row justify-content-center align-items-center">
                 <ul class="d-flex flex-row mb-0">
                     <li class="d-flex flex-row justify-content-center align-items-center mx-2">
@@ -233,6 +238,10 @@
         </section>
         
         <section class="shop_by_category  ">
+            <img src="PRUEBA/IMAGENES/Line 7.svg" class="position-absolute linea5" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 6.svg" class="position-absolute linea6" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 7.svg" class="position-absolute linea7" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 6.svg" class="position-absolute linea8" alt="" srcset="">
             <div class="d-flex flex-row">
                 <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="about_us_titulo_img" alt="titulo_img">
                 <h2 class="shop_by_category_titulo">SHOP BY CATEGORY</h2>
@@ -270,8 +279,8 @@
             </div>
         </section>
         <section class="testimonials  d-flex flex-column pt-3">
-            <div class="testimonials_panel_color_uno"></div >
             <div class="testimonials_panel_color_dos"></div>
+            <img src="PRUEBA/IMAGENES/Rectangle_tesimonios.svg" class="testimonials_panel_color_uno" style="position: absolute;  right: 0px; margin-top: -50px;" alt="" srcset="">
             <div class="d-flex flex-row">
                 <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class=" about_us_titulo_img" alt="about_us_titulo_img">
                 <h2 class="testimonials_titulo">Testimonials</h2>
@@ -322,6 +331,10 @@
             </div>
         </section>
         <section class="Subscribe_to_Newsletter container d-flex flex-column justify-content-center align-items-center my-3  ">
+            <img src="PRUEBA/IMAGENES/Line 7.svg" class="position-absolute linea1" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 6.svg" class="position-absolute linea2" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 7.svg" class="position-absolute linea3" alt="" srcset="">
+            <img src="PRUEBA/IMAGENES/Line 6.svg" class="position-absolute linea4" alt="" srcset="">
             <h2>Subscribe to Newsletter</h2>
             <form class="container d-flex flex-row flex-wrap justify-content-center align-content-center ">
                 <input type="text" placeholder="" class="mx-1">
