--- a/about.html
+++ b/about.html
@@ -130,9 +130,11 @@
                             audience.
                         </p>
                     </article>
-                    <button class="about_boton mt-4">
-                        Read  More
-                    </button>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <button class="about_boton mt-4">
+                            Read  More
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="about_caracteristicas py-2 container my-4 d-flex flex-row  justify-content-center align-items-center">
