--- a/index.html
+++ b/index.html
@@ -12,15 +12,6 @@
     <link rel="stylesheet" href="./owl/owl.theme.default.min.css">
 </head>
 <body>
-    <svg style="visibility: hidden; position: absolute;" width="0" height="0" xmlns="http://www.w3.org/2000/svg" version="1.1">
-        <defs>
-              <filter id="round">
-                  <feGaussianBlur in="SourceGraphic" stdDeviation="5" result="blur" />    
-                  <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
-                  <feComposite in="SourceGraphic" in2="goo" operator="atop"/>
-              </filter>
-          </defs>
-    </svg>
     <header class=" container-fluid fixed-top justify-content-between align-items-center header">
         <div class="d-flex flex-row-reverse bd-highlight">
             <div class="header_top d-flex flex-row flex-grow-1 justify-content-center align-items-center">
@@ -84,8 +75,10 @@
         <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
         </video>
+        <img src="PRUEBA/IMAGENES/Rectangle_hero_1.svg" class="position-absolute  h-100" alt="">
+        <img src="PRUEBA/IMAGENES/Rectangle_hero_2.svg" class="position-absolute  h-100" alt="">
         <div class="hero_panel_color_uno position-absolute h-100"></div>
-        <div class="hero_panel_color_dos position-absolute h-100"></div>
+        <div class="hero_panel_color_dos position-absolute h-100 d-none"></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
                 Lead the pack! <br> Run Run!
