--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
         <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
         </video>
-        <img src="PRUEBA/IMAGENES/Rectangle_hero_1.svg" class="position-absolute  h-100" alt="">
-        <img src="PRUEBA/IMAGENES/Rectangle_hero_2.svg" class="position-absolute  h-100" alt="">
         <div class="hero_panel_color_uno position-absolute h-100"></div>
-        <div class="hero_panel_color_dos position-absolute h-100 d-none"></div>
+        <div class="hero_panel_color_dos position-absolute h-100 "></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
                 Lead the pack! <br> Run Run!
@@ -166,8 +164,9 @@
             </div>
         </section>
         <section class="about_us w-100 d-flex">
+            <div class="cuadrado position-absolute "></div>
             <div class="about_us_contenido_contenedor">
-                <div class=" d-flex flex-row">
+                <div class=" d-flex flex-row contenedor_titulo">
                     <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class="about_us_titulo_img" alt="about_us_titulo_img">
                     <h2 class="about_us_titulo">ABOUT US</h2>
                 </div>
