--- a/index.html
+++ b/index.html
@@ -165,8 +165,12 @@
         </section>
         <section class="about_us w-100 d-flex">
             <div class="cuadrado position-absolute "></div>
+            <div class=" d-flex flex-row contenedor_titulo_uno position-absolute ">
+                <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class="about_us_titulo_img" alt="about_us_titulo_img">
+                <h2 class="about_us_titulo">ABOUT US</h2>
+            </div>
             <div class="about_us_contenido_contenedor">
-                <div class=" d-flex flex-row contenedor_titulo">
+                <div class=" d-flex flex-row contenedor_titulo_dos ">
                     <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class="about_us_titulo_img" alt="about_us_titulo_img">
                     <h2 class="about_us_titulo">ABOUT US</h2>
                 </div>
