--- a/contact.html
+++ b/contact.html
@@ -73,9 +73,9 @@
     <section class=" d-flex flex-column align-items-end justify-content-center h-100 m-0 hero">
         <video autoplay loop muted pay class="w-100   position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
-          </video>
-        <div class="hero_panel_color_uno position-absolute h-100">
-        </div class>
+        </video>
+        <div class="hero_panel_color_cuadrado"></div>
+        <div class="hero_panel_color_uno position-absolute h-100"></div>
         <div class="hero_panel_color_dos position-absolute h-100"></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
             <h1 class="hero_top_titulo">
