--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         <video autoplay loop muted pay class="w-100 h-100  position-absolute  ">
             <source src="PRUEBA/IMAGENES/video.mp4" type="video/mp4">
         </video>
+        <div class="hero_panel_color_cuadrado"></div>
         <div class="hero_panel_color_uno position-absolute h-100 "></div>
         <div class="hero_panel_color_dos position-absolute h-100 "></div>
         <div class="w-100 d-flex flex-column justify-content-center align-items-end hero_top flex-grow-1">
@@ -85,7 +86,7 @@
                 Get Started
             </button>
         </div>
-        <ul class="hero_redes_sociales d-flex flex-row ">
+        <ul class="hero_redes_sociales d-flex flex-row  ">
             <li class="hero_redes_sociales_item d-flex justify-content-center align-items-center">
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
                     <i class="bi bi-facebook"></i> 
@@ -111,7 +112,7 @@
             <img src="PRUEBA/IMAGENES/Line 6.svg" class="position-absolute linea8" alt="" srcset="">
             <div class="d-flex flex-row">
                 <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="about_us_titulo_img" alt="seccion_titulo_img">
-                <h2 class="best_sellers_titulo">BEST SELLERS</h2>
+                <h2 class="best_sellers_titulo container">BEST SELLERS</h2>
             </div>
             <div class="container d-flex flex-column justify-content-center align-items-center ">
                 <div class=" owl-1 owl-carousel owl-theme  ">
@@ -163,22 +164,21 @@
                 </button>
             </div>
         </section>
-        <section class="about_us w-100 d-flex">
+        <section class="about_us  d-flex ">
             <div class="cuadrado position-absolute "></div>
             <div class=" d-flex flex-row contenedor_titulo_uno position-absolute ">
-                <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class="about_us_titulo_img" alt="about_us_titulo_img">
+                <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class=" about_us_titulo_img" alt="about_us_titulo_img">
                 <h2 class="about_us_titulo">ABOUT US</h2>
             </div>
-            <div class="about_us_contenido_contenedor">
+            <div class=" about_us_contenido_contenedor">
                 <div class=" d-flex flex-row contenedor_titulo_dos ">
                     <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class="about_us_titulo_img" alt="about_us_titulo_img">
                     <h2 class="about_us_titulo">ABOUT US</h2>
                 </div>
-                <div class="container about_us_informacion">
-                    <article class="container">
-                        <h6>W</h6> 
-                        <p>
-                            e are a leading company in the sports implements 
+                <div class=" about_us_informacion">
+                    <article class="">
+                        <p class="parrafo col">
+                            We are a leading company in the sports implements 
                             and articles market that seeks to position itself 
                             in the American Continent, providing high-quality 
                             products for the practice of sports, both 
@@ -189,9 +189,8 @@
                             mental and physical health of our public.
                         </p>
                     </article>
-                    <article class="container">
-                        <h6>W</h6> 
-                        <p>
+                    <article class="">
+                        <p class="parrafo col">
                             We provide solutions in the field of sports at a 
                             national and international level through innovation,
                             service and quality of the products we offer, our 
@@ -201,8 +200,8 @@
                             audience.
                         </p>
                     </article>
-                    <div class="d-flex justify-content-center align-items-center">
-                        <button class="container about_us_boton mt-5">
+                    <div class=" d-flex justify-content-center align-items-center">
+                        <button class=" about_us_boton">
                             Read  More
                         </button>
                     </div>
@@ -240,10 +239,11 @@
             <img src="PRUEBA/IMAGENES/Line 6.svg" class="position-absolute linea8" alt="" srcset="">
             <div class="d-flex flex-row">
                 <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class="about_us_titulo_img" alt="titulo_img">
-                <h2 class="shop_by_category_titulo">SHOP BY CATEGORY</h2>
+                <h2 class="shop_by_category_titulo container">SHOP BY CATEGORY</h2>
             </div>
             <div class=" shop_by_category_container d-flex flex-row justify-content-center align-items-center ">
                 <div class="shop_by_category_card d-flex flex-column justify-content-between align-items-center ">
+                    <div class="sombra_card1"></div>
                     <div class="shop_by_category_card_img mx-3">
                         <img src="PRUEBA/IMAGENES/CATEGORIA 1.jpg" class="card-img-top" alt="...">
                     </div>
@@ -252,7 +252,8 @@
                     </div>
                 </div>
                 <div class="shop_by_category_card d-flex flex-column justify-content-center align-items-center mx-3">
-                    <div class="shop_by_category_card_img">
+                    <div class="sombra_card"></div>
+                    <div class="shop_by_category_card_img mx-4">
                         <img src="PRUEBA/IMAGENES/CATEGORIA 2.jpg" class="card-img-top" alt="...">
                     </div>
                     <div class="shop_by_category_card_titulo mt-5">
@@ -260,7 +261,8 @@
                     </div>
                 </div>
                 <div class="shop_by_category_card d-flex flex-column justify-content-center align-items-center mx-3">
-                    <div class="shop_by_category_card_img">
+                    <div class="sombra_card"></div>
+                    <div class="shop_by_category_card_img ">
                         <img src="PRUEBA/IMAGENES/CATEGORIA 3.jpg" class="card-img-top" alt="...">
                     </div>
                     <div class="shop_by_category_card_titulo mt-5">
@@ -279,7 +281,7 @@
             <img src="PRUEBA/IMAGENES/Rectangle_tesimonios.svg" class="testimonials_panel_color_uno" style="position: absolute;  right: 0px; margin-top: -50px;" alt="" srcset="">
             <div class="d-flex flex-row">
                 <img src="PRUEBA/IMAGENES/Rectangle 5.svg" class=" about_us_titulo_img" alt="about_us_titulo_img">
-                <h2 class="testimonials_titulo">Testimonials</h2>
+                <h2 class="testimonials_titulo container">Testimonials</h2>
             </div>
             <div class="testimonials_container w-100 d-flex flex-column justify-content-center align-items-center" >
                 <div class="container owl-2 owl-carousel owl-theme">
@@ -340,13 +342,13 @@
             </form>
         </section>
     </main>
-    <footer class="d-flex flex-column ">
-        <div class=" footer_info d-flex flex-row   flex-wrap pt-4">
-            <div class="d-flex flex-column justify-content-center align-items-center ">
-                <a href="index.html" target="_blank" rel="noopener noreferrer">
+    <footer class="container-fluid d-flex flex-column ">
+        <div class="row footer_info">
+            <div class=" col-4 my-3 d-flex flex-column justify-content-center align-items-center ">
+                <a class="" href="index.html" target="_blank" rel="noopener noreferrer">
                     <img src="PRUEBA/IMAGENES/LOGO-BLNCO.png" alt="" >
                 </a>
-                <ul class="d-flex flex-row list-unstyled">
+                <ul class=" d-flex flex-row list-unstyled m-0">
                     <li class="mx-2">
                         <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
                             <i class="bi bi-facebook"></i>
@@ -364,7 +366,7 @@
                     </li>
                 </ul>
             </div>
-            <div>
+            <div class="col-4 my-3 ">
                 <h6>Quick Links</h6>
                 <ul>
                     <li >
@@ -385,7 +387,7 @@
                     </li>
                 </ul>
             </div>
-            <div>
+            <div class="col-4 my-3 ">
                 <h6>More Information</h6>
                 <ul>
                     <li class="list-unstyled d-flex flex-row">
@@ -412,14 +414,13 @@
                 </ul>
             </div>
         </div>
-        <div class=" d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
-            <div class="container">
-
+        <div class="row d-flex flex-row flex-wrap justify-content-between align-items-center footer_b p-4">
+            <div class="container d-flex justify-content-between align-items-center">
+                <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
+                <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
+                    <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
+                </a>
             </div>
-            <p class="m-0">Copyright © 2022 All rights reserved | This Website Was Designed And Developed by</p>
-            <a href="https://josesilvera.com/" target="_blank" rel="noopener noreferrer">
-                <img src="PRUEBA/IMAGENES/logo Silvera Enterprises.png" alt="">
-            </a>
         </div>
     </footer>
     <script src="./owl/jquery.min.js"></script>
