--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
         <section class="about_us">
             <div class=" about_us_contenido_contenedor pt-4">
                 <div class="d-flex flex-row">
-                    <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class="col-4 col-md-3 col-xl-2 pl-0" alt="seccion_titulo_img">
+                    <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class="col-3 col-md-3 col-xl-2 pl-0" alt="seccion_titulo_img">
                     <h2 class="secciones_titulo text-white container">BEST SELLERS</h2>
                 </div>
-                <div class=" about_us_informacion container">
+                <div class=" about_us_informacion container ">
                     <article class="row">
-                        <p class="col parrafo ">
+                        <p class="col parrafo mx-5 m-sm-0">
                             We are a leading company in the sports implements 
                             and articles market that seeks to position itself 
                             in the American Continent, providing high-quality 
@@ -208,7 +208,7 @@
                         </p>
                     </article>
                     <article class="row">
-                        <p class="col parrafo ">
+                        <p class="col parrafo mx-5 m-sm-0">
                             We provide solutions in the field of sports at a 
                             national and international level through innovation,
                             service and quality of the products we offer, our 
