--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 </div>
                 <div class=" about_us_informacion container ">
                     <article class="row">
-                        <p class="col parrafo mx-5 m-sm-0">
+                        <p class="col parrafo mx-3 m-sm-0">
                             We are a leading company in the sports implements 
                             and articles market that seeks to position itself 
                             in the American Continent, providing high-quality 
@@ -208,7 +208,7 @@
                         </p>
                     </article>
                     <article class="row">
-                        <p class="col parrafo mx-5 m-sm-0">
+                        <p class="col parrafo mx-3 m-sm-0">
                             We provide solutions in the field of sports at a 
                             national and international level through innovation,
                             service and quality of the products we offer, our 
@@ -218,7 +218,7 @@
                             audience.
                         </p>
                     </article>
-                    <div class=" row mt-5">
+                    <div class=" row mt-5 d-sm-flex justify-content-center">
                         <button class=" about_us_boton" >
                             Read  More
                         </button>
