--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class=" about_us_contenido_contenedor pt-4">
                 <div class="d-flex flex-row">
                     <img src="PRUEBA/IMAGENES/Rectangle 5 (1).svg" class="col-3 col-md-3 col-xl-2 pl-0" alt="seccion_titulo_img">
-                    <h2 class="secciones_titulo text-white container">BEST SELLERS</h2>
+                    <h2 class="secciones_titulo text-white container">ABOUT US</h2>
                 </div>
                 <div class=" about_us_informacion container ">
                     <article class="row">
@@ -227,7 +227,7 @@
             </div>
             <div class="cuadrado position-absolute"></div>
             <img src="PRUEBA/IMAGENES/Rectangle 4.svg" class="svg" alt="">
-            <div class="about_us_caracteristicas d-flex flex-row justify-content-center align-items-center">
+            <div class="about_us_caracteristicas  d-none  flex-row justify-content-center align-items-center">
                 <ul class="d-flex flex-row mb-0">
                     <li class="d-flex flex-row justify-content-center align-items-center mx-2">
                         <div class="d-flex flex-row justify-content-center align-items-center mx-2">
