--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             </div>
             <div class="cuadrado position-absolute"></div>
             <img src="PRUEBA/IMAGENES/Rectangle 4.svg" class="svg" alt="">
-            <div class="about_us_caracteristicas  d-none  flex-row justify-content-center align-items-center">
+            <div class="about_us_caracteristicas   flex-row justify-content-center align-items-center">
                 <ul class="d-flex flex-row mb-0">
                     <li class="d-flex flex-row justify-content-center align-items-center mx-2">
                         <div class="d-flex flex-row justify-content-center align-items-center mx-2">
